fix loading on dark mode

--- a/src/sass/general.sass
+++ b/src/sass/general.sass
@@ -185,6 +185,8 @@ input
 #spinner
   max-width: 2em
   margin: 2em
+  @include t.dark
+    filter: invert(100%)
 
 footer
   display: flex
